fix: Extra scrollbar on outer container

--- a/src/components/Logfile/Logfile.css
+++ b/src/components/Logfile/Logfile.css
@@ -15,7 +15,6 @@
 main {
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 .logfile-url-form {
